# monitoing-interface-with-ESP32-P4

./: .gitignore  CMakeLists.txt  partitions.csv
main/: CMakeLists.txt  idf_component.yml  main.c  ui.c  ui.h
